Atualizaçao de telas, funcionalidades de cliente e vededor